# terminal-velocity

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  readme.md
.github/workflows/: publish.yml  rust.yml
src/: anthropic.rs  config.rs  constants.rs  errors.rs  generator.rs  git.rs  init.rs  lib.rs  main.rs  markdown.rs  post.rs  serve.rs
src/templates/: config.toml  post.html
templates/: base.html  config.toml  example.md  index.html  style.css
