[package]
name = "terminal-velocity"
version = "1.0.1"
build = "build.rs"
description = "A blazingly fast static site generator for dorks"
authors = ["TJK <tjkells@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/systemsoverload/terminal-velocity"
repository = "https://github.com/systemsoverload/terminal-velocity"
documentation = "https://docs.rs/html-compare-rs"
keywords = ["static-site", "blog", "markdown", "terminal", "retro"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "termv"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
yaml-front-matter = "0.1"
serde = { version = "1.0", features = ["derive"] }
tera = "1.19"
walkdir = "2.3"
clap = { version = "4.0", features = ["derive", "env"] }
console = "0.15"
indicatif = "0.17"
thiserror = "1.0"
actix-web = "4.9.0"
actix-files = "0.6.6"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
notify = "7.0.0"
reqwest = { version = "0.12.9", features = ["json", "default-tls"] }
git2 = "0.19.0"
shell-words = "1.1.0"
syntect = "5.2.0"
pulldown-cmark = "0.12.2"


[build-dependencies]
walkdir = "2"

[dev-dependencies]
tempfile = "3.14.0"

